# dustycam

./: .gitignore  AGENTS.md  Makefile  README.md  crash_log.csv  install-on-pi.sh  pyproject.toml  yolov8n_int8_320.tflite
.agent/rules/: context-file.md
docs/: TODO.md  build_guide.md  one_shot_workflow.md  pi5_build_guide.md
dustycam/: __init__.py  app.py  commands.py  config.py  frame.py  node.py  pipeline.py  runner.py
dustycam/assets/: dusty.service  dustycam.service  wifi-fallback.service
dustycam/examples/: __init__.py  pipeline_dummy.py  run_ball_yolo.py  run_interactive.py  run_multi_stream.py
dustycam/nodes/: base.py  camera_sources.py  drawing.py  file_sources.py  generated_sources.py  motion.py  yolo.py
dustycam/nodes/detectors/: __init__.py  yolo.py
dustycam/nodes/processors/: __init__.py  drawing.py
dustycam/nodes/sinks/: __init__.py  web.py
dustycam/nodes/sources/: __init__.py
dustycam/utils/: image_gen.py  oneshot.py  yolo_detect.py
dustycam/webapp/: __init__.py  routes.py
dustycam/webapp/static/: style.css
dustycam/webapp/templates/: gallery.html  index.html
scripts/: check_battery.py  check_camera.py  check_pins.py  create_tflite_model.py  generate_test_images.py  record_motion.py  telemetry.py  wifi_fallback.py
tests/: test_cam_config.py  test_class_pipeline.py  test_expose_nodes.py  test_motion.py  test_pipeline_dummy.py  test_pydantic_settings.py  test_settings.py  test_sources.py  test_state_separation.py  test_yolo.py  test_yolo_bus.py  test_yolo_node.py
